fixed wrapper styling so items are centered and aligned

--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -1,12 +1,12 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 245px;
-  margin: 1rem;
-  position: relative;
+  height: 220px;
+  margin: 20px;
+  /* position: relative; */
   width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .card > .img-container {
@@ -15,33 +15,7 @@
   text-align: center;
   background:#6CADDC;
 }
+
 .card > .img-container > img {
   width: 100%
-}
-
-.card > .content {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 15px;
-}
-
-.card > .content > ul {
-  list-style-type: none;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-}
-
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
 }
